@@ -10,6 +10,7 @@
     <component>gstreamer+%28core%29</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.8.12</milestone>
       <milestone>0.8.11</milestone>
       <milestone>0.8.10</milestone>
       <milestone>0.8.9</milestone>
@@ -40,6 +41,8 @@
     <component>gst-plugins</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.8.12</milestone>
+      <milestone>0.8.11</milestone>
       <milestone>0.8.10</milestone>
       <milestone>0.8.9</milestone>
       <milestone>0.8.8</milestone>
@@ -65,6 +68,7 @@
     </milestones>
   </module>
 
+<!--
   <module id="gst-player">
     <component>gst-player</component>
     <milestones>
@@ -78,11 +82,27 @@
       <milestone>0.3.3</milestone>
     </milestones>
   </module>
+-->
+
+  <module id="gst-python">
+    <component>gst-python</component>
+    <milestones>
+      <milestone>0.8.4</milestone>
+      <milestone>0.8.3</milestone>
+      <milestone>0.8.2</milestone>
+      <milestone>0.8.1</milestone>
+      <milestone>0.8.0</milestone>
+    </milestones>
+  </module>
 
   <module id="gst-ffmpeg">
     <component>gst-ffmpeg</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.8.6</milestone>
+      <milestone>0.8.5</milestone>
+      <milestone>0.8.4</milestone>
+      <milestone>0.8.3</milestone>
       <milestone>0.8.2</milestone>
       <milestone>0.8.1</milestone>
       <milestone>0.8.0</milestone>
